--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,9 @@ php:
   - 5.4
 
 # execute any number of scripts before the test run, custom env's are available as variables
-before_script: composer install
+before_script: 
+- echo "<?php phpinfo(); ?>" | php
+- composer install
 
 # omitting "script:" will default to phpunit
 # use the $DB env variable to determine the phpunit.xml to use
