--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,7 @@ php:
   - 5.4
 
 # execute any number of scripts before the test run, custom env's are available as variables
-before_script: 
-- echo "<?php phpinfo(); ?>" | php
-- composer install
+before_script: curl -sS https://getcomposer.org/installer | php -- --check
 
 # omitting "script:" will default to phpunit
 # use the $DB env variable to determine the phpunit.xml to use
