--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ php:
 # execute any number of scripts before the test run, custom env's are available as variables
 before_script: 
 - curl -sS https://getcomposer.org/installer | php -- --check
-- composer install
+- composer install -vvv
 
 # omitting "script:" will default to phpunit
 # use the $DB env variable to determine the phpunit.xml to use
